--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
         <groupId>net.smartcosmos.extension</groupId>
         <artifactId>smartcosmos-extension-starter</artifactId>
         <version>2.13.0</version>
-        <relativePath />
+        <relativePath></relativePath>
     </parent>
 
     <artifactId>smartcosmos-extension-welcome-profiles</artifactId>
