Set framework version to 2.13.1, set smartcosmos dependencies scope to provided

--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
     <parent>
         <groupId>net.smartcosmos.extension</groupId>
         <artifactId>smartcosmos-extension-starter</artifactId>
-        <version>2.13.0</version>
-        <relativePath></relativePath>
+        <version>2.13.1</version>
+        <relativePath />
     </parent>
 
     <artifactId>smartcosmos-extension-welcome-profiles</artifactId>
@@ -22,6 +22,7 @@
         <dependency>
             <groupId>net.smartcosmos</groupId>
             <artifactId>smartcosmos-extension-api</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.smartcosmos.extension</groupId>
