--- a/pom.xml
+++ b/pom.xml
@@ -2,74 +2,42 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>net.smartcosmos.extension</groupId>
-        <artifactId>smartcosmos-extension-starter</artifactId>
-        <version>2.13.1</version>
+        <groupId>net.smartcosmos</groupId>
+        <artifactId>smartcosmos-framework-parent</artifactId>
+        <version>3.0.0-SNAPSHOT</version>
         <relativePath></relativePath>
     </parent>
 
-    <artifactId>smartcosmos-extension-welcome-profiles</artifactId>
-    <version>1.0.1-development-SNAPSHOT</version>
+    <artifactId>profiles-ui-welcome</artifactId>
+    <version>2.0.0-development-SNAPSHOT</version>
 
-    <name>SMART COSMOS Profiles Welcome Page Extension</name>
-    <description>SMART COSMOS Profiles Welcome Page Extension</description>
+    <name>SMART COSMOS Profiles Welcome Page</name>
+    <description>SMART COSMOS Profiles Welcome Page</description>
 
     <dependencies>
         <dependency>
-            <groupId>io.dropwizard</groupId>
-            <artifactId>dropwizard-assets</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>net.smartcosmos.extension</groupId>
-            <artifactId>smartcosmos-extension-starter-test</artifactId>
+            <groupId>net.smartcosmos</groupId>
+            <artifactId>smartcosmos-framework-test</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>net.smartcosmos</groupId>
-            <artifactId>smartcosmos-extension-api</artifactId>
-            <scope>provided</scope>
+            <artifactId>smartcosmos-framework</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-            </plugin>
-
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>license-maven-plugin</artifactId>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
-
-    <url>http://smartcosmos.net</url>
-    <inceptionYear>2016</inceptionYear>
-    <organization>
-        <name>Smartrac Technology Fletcher, Inc.</name>
-        <url>http://www.smartrac-group.com</url>
-    </organization>
-    <licenses>
-        <license>
-            <name>Apache License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
-            <distribution>repo</distribution>
-            <comments>Copyright (C) 2013 - 2016 Smartrac Technology Fletcher, Inc.</comments>
-        </license>
-    </licenses>
-    <developers>
-        <developer>
-            <id>cloud.engineering</id>
-            <name>SMARTRAC API Team</name>
-            <email>api@smartrac-group.com</email>
-            <organization>Smartrac Technology Fletcher, Inc.</organization>
-            <roles>
-                <role>Project Lead</role>
-            </roles>
-            <timezone>-5</timezone>
-        </developer>
-    </developers>
     <scm>
         <connection>scm:git:git://github.com/SMARTRACTECHNOLOGY/smartcosmos-extension-welcome-profiles.git</connection>
         <developerConnection>scm:git:git@github.com:SMARTRACTECHNOLOGY/smartcosmos-extension-welcome-profiles.git</developerConnection>
